# CheckPo

./: .gitignore  Cargo.toml  README.md  WINDOWS_VALIDATION_PLAN.md  アーキテクチャ.md
.github/workflows/: ci.yml  release.yml
review-artifacts/: windows-real-usage-benchmark-20260715.md
samples/recovery-conflict-demo/: README.md  prepare.ps1
scripts/: checkpo_real_usage_benchmark.py
src/CheckPo.Cli/: Cargo.toml
src/CheckPo.Cli/src/: main.rs
src/CheckPo.Cli/tests/: maintenance_expected_plan.rs
src/CheckPo.Core/: Cargo.toml
src/CheckPo.Core/src/: checkpoint.rs  checkpoint_create_journal.rs  checkpoint_metrics.rs  checkpoint_names.rs  db.rs  diagnostics.rs  diff.rs  discard.rs  lib.rs  maintenance.rs  models.rs  path.rs  project.rs  restore.rs  scanner.rs  storage.rs  storage_root_setting.rs  transaction.rs  verify.rs
src/CheckPo.Core/src/storage/: anchored_fs.rs  atomic_io.rs  chunk_store.rs  db_file.rs  fs_safety.rs  journal_cleanup.rs  layout.rs  lock.rs  merkle_codec.rs  object_store.rs  platform.rs  snapshot_inventory.rs  snapshot_store.rs  snapshot_v2.rs  tests.rs  windows_durability.rs
src/CheckPo.Core/src/transaction/: apply.rs  journal.rs  plan.rs  project_file_ops.rs  recovery.rs  tests.rs  unity_guard.rs
src/CheckPo.Core/tests/: e2e.rs  storage_root.rs  v2_scale.rs
src/CheckPo.Tauri/frontend/: app.js  config.js  dialogs.js  diff-tree.js  frontend-state.js  frontend-state.test.js  i18n.js  index.html  styles.css  theme.js  utils.js
src/CheckPo.Tauri/src-tauri/: Cargo.toml  tauri.conf.json
src/CheckPo.Tauri/src-tauri/src/: lib.rs  main.rs
