[package]
name = "checkpo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "checkpo"
path = "src/main.rs"

[dependencies]
checkpo-core = { path = "../CheckPo.Core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
