[package]
name = "checkpo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
dirs = "6"
filetime = "0.2"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1"
reflink-copy = "0.1.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-case-mapping = "=1.0.0"
unicode-normalization = "=0.1.24"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
rustix = { version = "1.1", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Wdk_Foundation", "Wdk_Storage_FileSystem", "Win32_Foundation", "Win32_Globalization", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3"
