[package]
name = "checkpo-tauri"
version = "0.2.1"
description = "Tauri shell for CheckPo"
authors = ["suu"]
edition = "2021"
rust-version.workspace = true

[lib]
name = "checkpo_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
checkpo-core = { path = "../../CheckPo.Core" }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
